--- a/new-gotbook/src/app/header/header.component.html
+++ b/new-gotbook/src/app/header/header.component.html
@@ -17,6 +17,6 @@
 </div>
 <!-- Jumbotron -->
 <div class="avatar">
-    <h1>Daenerys Targaryen</h1>
+    <h1>{{user.character.name}} {{user.character.surname}}</h1>
     <img src="../assets/characts/danny.png" alt="Avatar Image" />
 </div>
