--- a/new-gotbook/src/app/app.component.html
+++ b/new-gotbook/src/app/app.component.html
@@ -2,5 +2,5 @@
 <router-outlet></router-outlet>
 <!-- Footer -->
 <footer class="text-center">
-    <p>Copyleft The High Sparrow - 2017 - GOTBook - Chat when winter is comming</p>
+    <p>Copyleft The High Sparrow - 2017 - GOTBook - Chat when winter is coming</p>
 </footer>
