--- a/new-gotbook/src/app/partner-home/dates-character-home/dates-character-home.component.html
+++ b/new-gotbook/src/app/partner-home/dates-character-home/dates-character-home.component.html
@@ -1,3 +1,5 @@
-<p>
-  dates-character-home works!
-</p>
+<div>
+    <app-dates-character></app-dates-character>
+    <app-messages-list></app-messages-list>
+    <app-partner-list></app-partner-list>
+</div>
