--- a/new-gotbook/src/app/messages-home/messages-list/messages/messages.component.css
+++ b/new-gotbook/src/app/messages-home/messages-list/messages/messages.component.css
@@ -19,6 +19,11 @@ textarea {
     margin: auto;
     width: 80%;
     padding: 10px;
+    padding-bottom: 10px;
+}
+
+.title-msg {
+    padding-left: 10px;
 }
 
 .btn {
