--- a/new-gotbook/src/app/partner-home/partner-list/partner-list.component.html
+++ b/new-gotbook/src/app/partner-home/partner-list/partner-list.component.html
@@ -1,3 +1,3 @@
-<p>
-  partner-list works!
-</p>
+<div class="list-partners-container">
+    <h1 class="title-list-partners">My partners</h1>
+</div>
