--- a/new-gotbook/src/app/messages-home/messages-home.component.html
+++ b/new-gotbook/src/app/messages-home/messages-home.component.html
@@ -1,4 +1,8 @@
 <div>
     <app-messages></app-messages>
-    <app-messages-list></app-messages-list>
+    <div class="row">
+        <div class="col-md-2"></div>
+        <app-messages-list class="col-md-8"></app-messages-list>
+        <div class="col-md-2"></div>
+    </div>
 </div>
