--- a/new-gotbook/src/app/partner-home/partner-home.component.html
+++ b/new-gotbook/src/app/partner-home/partner-home.component.html
@@ -1,1 +1,7 @@
-
+<app-search-partner></app-search-partner>
+<div class="row">
+        <div class="col-md-2"></div>
+        <app-partner-list class="col-md-3"></app-partner-list>
+        <app-character class="col-md-5"></app-character>
+        <div class="col-md-2"></div>
+    </div>
