--- a/new-gotbook/src/app/partner-home/dates-character-home/dates-character-home.component.html
+++ b/new-gotbook/src/app/partner-home/dates-character-home/dates-character-home.component.html
@@ -1,5 +1,9 @@
 <div>
     <app-dates-character></app-dates-character>
-    <app-messages-list></app-messages-list>
-    <app-partner-list></app-partner-list>
+    <div class="row">
+        <div class="col-md-2"></div>
+        <app-messages-list class="col-md-5"></app-messages-list>
+        <app-partner-list class="col-md-3"></app-partner-list>
+        <div class="col-md-2"></div>
+    </div>
 </div>
