Maquetación finalizada. Falta revisar servicios y funcionalidades

--- a/new-gotbook/src/app/partner-home/partner-list/partner-list.component.html
+++ b/new-gotbook/src/app/partner-home/partner-list/partner-list.component.html
@@ -1,6 +1,6 @@
 <div class="list-partners-container">
   <h1 class="title-list-partners">My partners</h1>
-  <div *ngFor="let relation of relations | searchPartner:'name':search" class="relation-container">
+  <div *ngFor="let relation of relations" class="relation-container">
     <div class="cart">
       <div class="partner-img">
         <img src="getPartnerPicture()" alt="Character picture" />
