--- a/new-gotbook/src/app/partner-home/partner-list/character/character.component.css
+++ b/new-gotbook/src/app/partner-home/partner-list/character/character.component.css
@@ -2,8 +2,39 @@
     margin-top: 20px;
     border-radius: 5px;
     background-color: white;
+    padding-bottom: 20px;
 }
 
 h1 {
     padding: 10px;
+}
+
+.charact-info-subcontainer {
+    padding-left: 20px; 
+}
+
+h4 {
+    font-size: 15px;
+}
+
+.cart-charact{
+    width: 97%;
+    margin: 0 auto;
+    margin-top: .5em;
+    margin-bottom: 2em;
+}
+
+.charact-img{
+    float: left;
+    width: 5em;
+    height: 5em;
+    border: 2px solid rgba(37, 35, 35, 0.82);
+    border-radius: 2px;
+    margin-right: 1em;
+    margin-bottom: 1em;
+}
+
+.partner-img img{
+    width: 100%;
+    height: 100%;
 }
