--- a/new-gotbook/src/app/messages-home/messages-list/messages-list.component.css
+++ b/new-gotbook/src/app/messages-home/messages-list/messages-list.component.css
@@ -2,6 +2,7 @@
     margin-top: 30px;
     border-radius: 5px;
     background-color: white;
+    padding-bottom: 15px;
 }
 
 .list-messages-container h1 {
