--- a/new-gotbook/src/app/partner-home/dates-character-home/dates-character/dates-character.component.html
+++ b/new-gotbook/src/app/partner-home/dates-character-home/dates-character/dates-character.component.html
@@ -1,11 +1,11 @@
 <div class="dates-container">
-        <h1 class="title-dates">My personal dates</h1>
-        <div class="dates-character">
-          <h3>Name</h3>
-          <input type="text" [(ngModel)]="character.name" (blur)="updateDates(character)">
-          <h3>Surname</h3>
-          <input type="text" [(ngModel)]="character.surname" (blur)="updateDates(character)">
-          <h3>House</h3>
-          <input type="text" [(ngModel)]="character.house" (blur)="updateDates(character)">
-        </div>
+    <h1 class="title-dates">My personal dates</h1>
+    <div class="dates-character">
+        <h3>Name</h3>
+        <input *ngIf="character" type="text" [(ngModel)]="character.name" (blur)="updateDates()">
+        <h3>Surname</h3>
+        <input *ngIf="character" type="text" [(ngModel)]="character.surname" (blur)="updateDates()">
+        <h3>House</h3>
+        <input *ngIf="character" type="text" [(ngModel)]="character.house" (blur)="updateDates()">
+    </div>
 </div>
