--- a/new-gotbook/src/app/partner-home/partner-list/character/character.component.css
+++ b/new-gotbook/src/app/partner-home/partner-list/character/character.component.css
@@ -10,21 +10,21 @@ h1 {
 }
 
 .charact-info-subcontainer {
-    padding-left: 20px; 
+    padding-left: 20px;
 }
 
 h4 {
     font-size: 15px;
 }
 
-.cart-charact{
+.cart-charact {
     width: 97%;
     margin: 0 auto;
     margin-top: .5em;
     margin-bottom: 2em;
 }
 
-.charact-img{
+.charact-img {
     float: left;
     width: 5em;
     height: 5em;
@@ -34,7 +34,7 @@ h4 {
     margin-bottom: 1em;
 }
 
-.partner-img img{
+.charact-img img {
     width: 100%;
     height: 100%;
 }
